# CodeExamples

./: .gitignore
python/CTypesExample/: CMakeLists.txt  CMakePresets.json  README.txt  TestCTypes.cpp  TestCTypes.py  requirements.txt
python/CommandPattern/: Command.py  CommandManager.py  Main.py  Mixin.py  Test.py
python/DOxygen/: Doxyfile
